# blog_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  ddl.sql  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: crud.py  database.py  db.py  main.py  models.py  schemas.py
frontend/: .gitignore
frontend/src/: App.css  App.jsx  AppContext.jsx  main.jsx
frontend/src/api/: axios.jsx
frontend/src/components/: Navbar.jsx  PostCard.jsx  ProtectedRoute.jsx
frontend/src/pages/: CreatePostPage.jsx  FavoritesPage.jsx  FeedPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
migrations/: env.py
migrations/versions/: 3e8d9484d2b5_initial_migration.py
