[project]
name = "blog_project"
version = "0.1.0"
description = "blog"
authors = [{name = "Алиса"}]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]
exclude = "venv"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
strict_optional = true
exclude = "venv"

