[project]
name = "blog_project"
version = "0.1.0"
description = "blog"
authors = [{name = "Алиса"}]
requires-python = ">=3.10"
dependencies = [
    "black==25.9.0",
    "cfgv==3.4.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "distlib==0.4.0",
    "filelock==3.20.0",
    "flake8==7.3.0",
    "identify==2.6.15",
    "isort==7.0.0",
    "mccabe==0.7.0",
    "mypy==1.18.2",
    "mypy_extensions==1.1.0",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pre_commit==4.3.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pytokens==0.2.0",
    "PyYAML==6.0.3",
    "tomli==2.3.0",
    "typing_extensions==4.15.0",
    "virtualenv==20.35.3"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]
exclude = "venv"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
strict_optional = true
exclude = "venv"